Adding input.txt and day_three.py to repo

--- a/Day 2/Day 2 Scratch.ipynb
+++ b/Day 2/Day 2 Scratch.ipynb
@@ -1676,6 +1676,62 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'Puzzle inputs differ by user.  Please log in to get your puzzle input.\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = 'https://adventofcode.com/2020/day/2/input'\n",
+    "res = requests.get(url)\n",
+    "html_page = res.content\n",
+    "html_page\n",
+    "# uf = urllib.request.urlopen(url)\n",
+    "# html = uf.read()\n",
+    "# html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
